--- a/Chat-app/public/index.html
+++ b/Chat-app/public/index.html
@@ -16,6 +16,7 @@
         <h1>Chat App</h1>
 
         <div id="login">
+            <p>You may want to open the application in 2 or more tabs to use the group chat functionality.</p>
             <input type="text" class="form-control" id="login-inp" placeholder="Name">
             <button class="btn btn-small btn-outline-primary mt-2" id="login-btn">Login</button>
         </div>
